# etch

./: AGENTS.md  Cargo.toml  README.md
examples/: basic_chain.rs  custom_payload.rs  verify_block.rs
src/: chain.rs  cli.rs  consensus.rs  crypto.rs  lib.rs  main.rs  miner.rs  p2p.rs  storage.rs  types.rs
tests/: integration.rs
