[package]
name = "etch"
version = "0.1.0"
edition = "2021"
authors = ["Systems Programmer"]
description = "Minimal timestamping blockchain. Nothing else."
license = "MIT"
repository = "https://github.com/awdemos/etch"
rust-version = "1.75"

[[bin]]
name = "etch"
path = "src/main.rs"

[lib]
name = "etch"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["use-std"] }
sha2 = "0.10"
scrypt = { version = "0.11", default-features = false, features = ["std"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
libp2p = { version = "0.56", features = [
    "tcp",
    "tokio",
    "noise",
    "yamux",
    "gossipsub",
    "request-response",
    "identify",
    "ping",
    "macros",
] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
hex = "0.4"
serde-big-array = "0.5"

[dev-dependencies]
tempfile = "3.16"
tokio-test = "0.4"
